.local-dev/manifest/traefik/traefik-stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  selector:
    matchLabels:
      app: traefik
  serviceName: traefik
  replicas: 1
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: traefik
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:2.10
          args:
            - --api.insecure
            - --providers.kubernetescrd
            - --providers.kubernetesingress
            - --providers.file
            - --providers.file.directory=/opt/neoshowcase/conf
            - --providers.file.watch=true
            - --entrypoints.web.address=:80/tcp
            - --entrypoints.websecure.address=:443/tcp
            - --entrypoints.websecure.http.tls=true
            - --entrypoints.ns-ssh.address=:2201/tcp
            - --entrypoints.traefik.address=:8080/tcp
            - --entrypoints.metrics.address=:9100/tcp
            - --api.dashboard=true
            - --ping=true
            - --metrics.prometheus=true
            - --metrics.prometheus.entrypoint=metrics
          ports:
            - name: web
              containerPort: 80
            - name: web-secure
              containerPort: 443
            - name: ns-ssh
              containerPort: 2201
            - name: dashboard
              containerPort: 8080
            - name: metrics
              containerPort: 9100
          volumeMounts:
            - mountPath: /opt/neoshowcase/conf
              name: traefik-config
            - mountPath: /certs
              name: certs
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
        - name: certs
          hostPath:
            path: /srv/traefik/certs
