.local-dev/manifest/traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: ClusterIP
  ports:
    - targetPort: web
      name: web
      port: 80
    - targetPort: web-secure
      name: web-secure
      port: 443
  selector:
    app: traefik
