.local-dev/manifest/traefik/dashboard-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik-dashboard.local.trapti.tech`)
      services:
        - namespace: traefik
          kind: Service
          name: dashboard
          port: dashboard
          scheme: http
          strategy: RoundRobin
          weight: 1
